# gloamkirk

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  build.json  default.json  spatialos.json  spatialos_worker_packages.json
assets/: text.xcf  title.xcf
common/: CMakeLists.txt
common/src/collision/: collision.cc  collision.h
common/src/common/: conversions.h  definitions.h  hashes.h  math.h  timing.h
common/src/core/: collision.cc  collision.h  geometry.h  tile_map.cc  tile_map.h
common/src/managed/: managed.cc  managed.h
dependencies/: CMakeLists.txt  OIS.cmake  spatialos_worker_packages.json
deploy/: default.json
schema/: CMakeLists.txt
schema/schema/: chunk.schema  common.schema  gloamkirk.schema  master.schema  player.schema
snapshot/: CMakeLists.txt
snapshot/src/: snapshot_generator.cc
tools/: build_x64.bat  build_x64.sh  build_x86.bat  build_x86.sh  deploy.bat  deploy.sh  format.sh  launch_cloud.bat  launch_cloud.sh  launch_local.bat  launch_local.sh  local.bat  local.sh
workers/ambient/: CMakeLists.txt  build.json  spatialos.ambient.worker.json
workers/ambient/src/: ambient.cc
workers/client/: CMakeLists.txt  build.json  spatialos.client.worker.json
workers/client/src/: client.cc  components.cc  components.h  connect_mode.cc  connect_mode.h  glo.cc  glo.h  input.cc  input.h  mode.h  renderer.cc  renderer.h  title_mode.cc  title_mode.h
workers/client/src/logic/: world.cc  world.h
workers/client/src/shaders/: common.h  entity.h  fog.h  light.h  post.h  postprocess.h  simplex.h  text.h  title.h  upscale.h  world.h
workers/client/src/world/: player_controller.cc  player_controller.h  vertex_data.cc  vertex_data.h  world.cc  world.h  world_renderer.cc  world_renderer.h
workers/master/: CMakeLists.txt  build.json  spatialos.master.worker.json
workers/master/src/: client_handler.cc  client_handler.h  common_data.cc  common_data.h  master.cc  master_data.cc  master_data.h  world_spawner.cc  world_spawner.h
workers/master/src/worldgen/: map_builder.cc  map_builder.h  room_builder.cc  room_builder.h  world_builder.cc  world_builder.h
